Fixed overflow of HamburgerMenu

--- a/style.css
+++ b/style.css
@@ -382,6 +382,7 @@ footer .bottom {
 }
 #hamburgerMenu {
   display: none;
+  overflow-x: hidden;
 }
 [for="hamburgerMenu"] {
   display: none;
